@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import java.util.Arrays;
 import java.util.List;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -63,7 +62,7 @@ class TemplateJpaRepositoryTest {
 
     @Nested
     @DisplayName("템플릿 id로 템플릿 조회")
-    class fetchById {
+    class FetchById {
 
         @Test
         @DisplayName("템플릿 id로 템플릿 조회 성공")
@@ -87,7 +86,7 @@ class TemplateJpaRepositoryTest {
 
     @Nested
     @DisplayName("회원 id로 템플릿 조회")
-    class findByMemberId {
+    class FindByMemberId {
 
         @Test
         @DisplayName("회원 id로 템플릿 조회 성공")
@@ -207,7 +206,7 @@ class TemplateJpaRepositoryTest {
             saveThreeTemplates();
             saveTemplateTags();
 
-            List<Long> tagIds = Arrays.asList(tag2.getId());
+            List<Long> tagIds = List.of(tag2.getId());
             Specification<Template> spec = new TemplateSpecification(null, null, null, tagIds);
             Page<Template> result = templateRepository.findAll(spec, PageRequest.of(0, 10));
 
